--- a/landingPage/_config.yml
+++ b/landingPage/_config.yml
@@ -1,26 +1,25 @@
 # Site
-title:              Ben Rhine
-bio:                'Leader / Developer / Tinkerer / DJ / Streamer / Geek'
-description:        "Leader / Developer / Tinkerer / DJ / Streamer / Geek"
+title:              Massively
+bio:                'Jekyll version of the Massively theme by HTML5UP'
+description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "benrhine.com" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 
 # Comments
 disqus_shortname:   default
 
 # Social
 analytics-id:       "default"
-twitter:            benrhine
+twitter:            default
 facebook:           default
 instagram:          default
-linkedin:           default
-github:             benrhine
+github:             default
 
 # personal
-location:           Ontario, OH
-phone:              614-545-8725
-email:              rhine.ben@gmail.com # change this to your email to receive free emails for your contact submissions via Slapform.com
+location:           Los Angeles, CA
+phone:              310-318-5555
+email:              info@default.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
 background_image:   /images/bg.jpg
